--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "start": "parcel index.html --no-cache",
-    "start": "parcel build index.html --no-cache"
+    "build": "parcel build index.html --no-cache"
   },
   "dependencies": {
     "parcel-bundler": "^1.11.0",
